turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:5: error: type mismatch;
 found   : Double
 required: Int
  for (div <- 1 to divisions) {
                   ^